# Bookstore1

./: db.sqlite3  pyproject.toml
bookstore/: README.md  settings.py  urls.py
order/: factories.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/test_viewsets/: test_order_viewset.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category.py
product/models/: product.py
product/serializers/: category_serializer.py  product_serializer.py
product/test/: __init__.py  test_category_viewset.py  test_order_viewset.py  test_product_viewset.py
